strip down for catalunya

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Weather station aggregator for free flying in New Zealand." />
+    <meta name="description" content="Weather station aggregator for free flying in Catalunya." />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -34,7 +34,7 @@
       gtag('config', 'G-6ZC59F952Y');
     </script>
 
-    <title>Zephyr</title>
+    <title>Zephyr Catalunya</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
