email subject, ga tag

--- a/client/public/index.html
+++ b/client/public/index.html
@@ -23,7 +23,7 @@
     -->
 
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6ZC59F952Y"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-Y1L3B7W0QS"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag() {
@@ -31,7 +31,7 @@
       }
       gtag('js', new Date());
 
-      gtag('config', 'G-6ZC59F952Y');
+      gtag('config', 'G-Y1L3B7W0QS');
     </script>
 
     <title>Zephyr Catalunya</title>
